<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RavaVoting</string>
    <string name="section_login_logout">Login / Logout</string>
    <string name="section_scan_receipt">Scan receipt</string>
    <string name="section_user_elections">My elections</string>
    <string name="section_user_open_elections">Open elections</string>
    <string name="section_user_voted_elections">My voted elections</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="wrong_qrcode">The qrcode format is wrong</string>
    <string name="a">a:</string>
    <string name="b">b:</string>
    <string name="message">Message:</string>
    <string name="message_bigint">Message number:</string>
    <string name="receipt_info">Receipt info</string>
    <string name="next">Next</string>
    <string name="y1">y1:</string>
    <string name="y2">y2:</string>
    <string name="a1">a1:</string>
    <string name="a2">a2:</string>
    <string name="p">p:</string>
    <string name="g">g:</string>
    <string name="y">y:</string>
    <string name="result1">Result1:</string>
    <string name="result2">Result2:</string>
    <string name="c">c:</string>
    <string name="s">s:</string>
    <string name="note1">Note that <b>  y1 </b> = a and <b>  y2 </b>= b/m</string>
    <string name="note2">Note that a1 = g^k and a2 = y^k </string>
    <string name="next_note1">To get k and calculate a1 and a2 click next</string>
    <string name="next_note2">To calculate <b>  c </b> click next</string>
    <string name="next_note3">To get <b>  s </b> click next</string>
    <string name="next_note4">To calculate result click next</string>
    <string name="next_note5">As you can see Result1 is equals to a1 and Result2 is equals to a2 \n hence the message was correctly encoded</string>
    <string name="next_error">Sorry your message is wrong encoded!!!</string>
    <string name="app_id">254740274727830</string>
    <string name="no_data">No Data</string>
    <string name="please_input_server_name">Please input server name</string>
    <string name="please_input_server_port">Please input server port</string>
    <string name="connection_config">Connection</string>
    <string name="about">About</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="program_version">Version %1$s</string>
    <string name="election_details">Election details</string>

</resources>