<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:singleLine="true"
        android:text="@string/receipt_info"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp" >

        <TableLayout
            android:id="@+id/tablelayout_receipt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp" >

            <TableRow android:id="@+id/tablerow_p" >

                <TextView
                    android:id="@+id/textview_p_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/p"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_g" >

                <TextView
                    android:id="@+id/textview_g_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/g"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_g"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_y" >

                <TextView
                    android:id="@+id/textview_y_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/y"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_a" >

                <TextView
                    android:id="@+id/textview_a_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/a"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_b" >

                <TextView
                    android:id="@+id/textview_b_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/b"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_message" >

                <TextView
                    android:id="@+id/textview_message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/message"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow android:id="@+id/tablerow_message_bigint" >

                <TextView
                    android:id="@+id/textview_message_bigint_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/message_bigint"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_message_bigint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textview_y1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/y1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_y1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textview_y2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/y2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_y2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_a1"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_a1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/a1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_a2"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_a2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/a2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_c"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_c_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/c"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_s"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_s_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/s"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_result1"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_res1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/result1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_res1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow
                android:id="@+id/tablerow_result2"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textview_res2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="@string/result2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_res2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:singleLine="false" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/textview_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:text="@string/note1" />
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textview_next_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:text="@string/next_note1" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textview_wrong_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/wrong_qrcode"
        android:visibility="gone" />

</LinearLayout>